<resources>
    <string name="app_name">ezcommercemobile</string>
    <string name="login_spanish">Iniciar sesión</string>
    <string name="email_prompt">Correo electrónico…</string>
    <string name="password_prompt">Contraseña…</string>
    <string name="signUp_spanish">Registrarse</string>
    <string name="ezcommerce_logo">EzCommerce Logo</string>
    <string name="button_buy">Comprar ahora</string>
    <string name="image_of_the_product_description">Image of the product.</string>
    <string name="quantity">Cantidad:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="return_button">Regresar</string>
    <string name="refund_reason">Introduzca el motivo de la devolución.</string>
    <string name="confirm_return">Confirmar Devolución.</string>
    <string name="purchase_date">Fecha de compra.</string>
    <string name="purchase_ammount">Cantidad de compra.</string>
    <string name="total">Total.</string>
</resources>